--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT = 5000
-DATABASE = "bestByte"
-MONGODB_URL = mongodb://127.0.0.1:27017/
+PORT = 5000;
+DATABASE = "bestByte";
+MONGODB_URL = mongodb://localhost:27017;
